<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample_2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">百纳火车票信息查询系统</string>
    <string name="select1">车次查询</string>
    <string name="select2">车站查询</string>
    <string name="select3">站站查询</string>
    <string name="method">附加功能</string>
    <string name="about">关于</string>
    <string name="ours">了解我们</string>
    <string name="select">查询</string>
    <string name="back">返回</string>
    <string name="start">始发站</string>
    <string name="stop">终点站</string>
    <string name="transfer">中转站</string>
    <string name="tid">车次</string>
    <string name="name">列车名</string>
    <string name="type">列车类型</string>
    <string name="startstation">始发站</string>
    <string name="terminus">终点站</string>
    <string name="beginstation">乘车起点</string>
    <string name="begintime">发车时间</string>
    <string name="stopstation">乘车终点</string>
    <string name="stoptime">到站时间</string>
    <string name="addTid">列车添加</string>
    <string name="addStation">车站添加</string>
    <string name="addrelative">关系添加</string>
    <string name="station">车站名</string>
    <string name="shorted">简称</string>
    <string name="add">添加</string>
    <string name="time">乘车时间</string>
    <string name="timeformat">时间格式</string>
    <string name="date">日期</string>
    
</resources>
