<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sample2.MainActivity" >
    
    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/title" />

     <TableLayout
         android:id="@+id/tl1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/title1"
         android:layout_marginTop="30dp" >

         <TableRow
             android:id="@+id/tableRow1"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             
              <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select1"
        android:onClick="GoToTidSelect" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select2" 
        android:onClick="GoToStationSelect"/>
         </TableRow>



         <TableRow
             android:id="@+id/tableRow2"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
    
               <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select3"
        android:onClick="GoToZZSelect" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method"
        android:onClick="GoToMethod" />
         </TableRow>

         <TableRow
             android:id="@+id/tableRow3"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
     <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" 
        android:onClick="GoToAbout"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ours"
        android:onClick="GoToOurs" />
         </TableRow>
     </TableLayout>
     
     
    <ImageView
        android:id="@+id/pucture"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/tl1"
        android:layout_below="@+id/title1"
        android:src="@drawable/ic_launcher" />
     

   
    
</RelativeLayout>
