<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/train_bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/train_bt1"
        android:layout_alignBottom="@+id/train_bt1"
        android:layout_alignRight="@+id/train_et2"
        android:layout_marginRight="35dp"
        android:onClick="GoToMethod"
        android:text="@string/back" />

    <TextView
        android:id="@+id/train_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/train_tv1"
        android:layout_below="@+id/train_tv1"
        android:layout_marginTop="28dp"
        android:text="@string/type" />

    <TextView
        android:id="@+id/train_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/train_type"
        android:layout_below="@+id/train_type"
        android:layout_marginTop="30dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/train_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/train_name"
        android:layout_below="@+id/train_name"
        android:layout_marginTop="35dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/train_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/train_tv2"
        android:layout_centerVertical="true"
        android:text="@string/stop" />

    <EditText
        android:id="@+id/train_et7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/train_tv3"
        android:layout_alignRight="@+id/train_bt2"
        android:ems="10" />

    <EditText
        android:id="@+id/train_et6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/train_tv2"
        android:layout_alignLeft="@+id/train_et7"
        android:ems="10" />

    <EditText
        android:id="@+id/train_et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/train_name"
        android:layout_alignLeft="@+id/train_et6"
        android:ems="10" />

    <EditText
        android:id="@+id/train_et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/train_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:ems="10" />

    <EditText
        android:id="@+id/train_et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/train_tv1"
        android:layout_toRightOf="@+id/train_type"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/train_bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/train_tv3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:onClick="AddTrain"
        android:text="@string/add" />

    <TextView
        android:id="@+id/train_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/train_bt1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/tid" />

</RelativeLayout>
