<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/zz_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/select3" />

    <Button
        android:id="@+id/zz_btback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zz_bt1"
        android:layout_alignBottom="@+id/zz_bt1"
        android:layout_alignRight="@+id/zz_et3"
        android:onClick="GoBack"
        android:text="@string/back" />

    <TextView
        android:id="@+id/zz_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/zz_bt1"
        android:layout_below="@+id/zz_tv1"
        android:layout_marginTop="17dp"
        android:text="@string/start" />

    <EditText
        android:id="@+id/zz_et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zz_tv2"
        android:layout_below="@+id/zz_tv2"
        android:layout_marginTop="21dp"
        android:ems="10" />

    <TextView
        android:id="@+id/zz_yv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zz_et1"
        android:layout_below="@+id/zz_et1"
        android:layout_marginTop="40dp"
        android:text="@string/transfer" />

    <CheckBox
        android:id="@+id/zz_cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zz_yv3"
        android:layout_alignBottom="@+id/zz_yv3"
        android:layout_alignLeft="@+id/zz_tv1"
        android:text="@string/transfer" />

    <EditText
        android:id="@+id/zz_et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zz_yv3"
        android:layout_below="@+id/zz_cb1"
        android:layout_marginTop="33dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/zz_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zz_et2"
        android:layout_below="@+id/zz_et2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/stop" />

    <EditText
        android:id="@+id/zz_et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zz_et2"
        android:layout_below="@+id/zz_tv4"
        android:layout_marginTop="24dp"
        android:ems="10" />

    <Button
        android:id="@+id/zz_bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:onClick="ZZSelect"
        android:text="@string/select" />

</RelativeLayout>
