<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/add_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/station" />

    

    <TextView
        android:id="@+id/add_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_et1"
        android:layout_below="@+id/add_et2"
        android:layout_marginTop="17dp"
        android:text="@string/shorted" />

    <EditText
        android:id="@+id/add_et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_tv1"
        android:layout_below="@+id/add_tv2"
        android:layout_marginTop="32dp"
        android:ems="10" />

    <EditText
        android:id="@+id/add_et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_tv1"
        android:layout_below="@+id/add_tv1"
        android:layout_marginTop="46dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add_bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_et1"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/add_et1"
        android:onClick="GoToMethod"
        android:text="@string/back" />

    <Button
        android:id="@+id/add_bt1"
        android:onClick="AddStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_bt2"
        android:layout_alignBottom="@+id/add_bt2"
        android:layout_alignLeft="@+id/add_et1"
        android:text="@string/add" />

</RelativeLayout>
