<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/relative_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/tid" />

    <TextView
        android:id="@+id/relative_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relative_tv2"
        android:layout_marginTop="31dp"
        android:text="@string/begintime" />

    <EditText
        android:id="@+id/relative_et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relative_tv1"
        android:layout_alignBottom="@+id/relative_tv1"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <EditText
        android:id="@+id/relative_et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relative_tv3"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <TextView
        android:id="@+id/relative_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relative_et1"
        android:layout_marginTop="26dp"
        android:text="@string/station" />

    <EditText
        android:id="@+id/relative_et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relative_tv3"
        android:layout_alignBottom="@+id/relative_tv3"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <EditText
        android:id="@+id/relative_et4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relative_tv4"
        android:layout_alignBottom="@+id/relative_tv4"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/relative_bt2"
        android:ems="10" />

    <TextView
        android:id="@+id/relative_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relative_et3"
        android:layout_marginTop="64dp"
        android:text="@string/stoptime" />

    <Button
        android:id="@+id/relative_bt2"
        android:onClick="GoTimeForemat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relative_et3"
        android:text="@string/timeformat" />

    <Button
        android:id="@+id/relative_bt1"
        android:onClick="GoTimeForemat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relative_et4"
        android:text="@string/timeformat" />

</RelativeLayout>
