<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/station_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select2" />

    <TextView
        android:id="@+id/station_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/station_tv1"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="14dp"
        android:text="@string/select2" />

    <EditText
        android:id="@+id/station_ed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/station_btn2"
        android:layout_below="@+id/station_tv2"
        android:layout_marginTop="34dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/station_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/station_tv2"
        android:layout_below="@+id/station_ed1"
        android:layout_marginTop="38dp"
        android:onClick="GoBack"
        android:text="@string/back" />

    <Button
        android:id="@+id/station_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/station_btn2"
        android:layout_alignBottom="@+id/station_btn2"
        android:layout_alignRight="@+id/station_ed1"
        android:onClick="StationSelect"
        android:text="@string/select" />

</RelativeLayout>
